# spendingproofs

./: .env.example  .eslintrc.json  .gitignore  ACQUISITION_UPGRADE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  SKYFIRE_CONFIG.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
prover/arc-prover/: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md
prover/arc-prover/models/: article-classifier.onnx  spending-model.onnx  threshold-checker.onnx
prover/arc-prover/src/: main.rs
prover/zkml-jolt-core/: Cargo.toml
prover/zkml-jolt-core/src/: lib.rs
prover/zkml-jolt-core/src/benches/: bench.rs
prover/zkml-jolt-core/src/jolt/: mod.rs  proof_serialization.rs  sumcheck.rs  witness.rs
prover/zkml-jolt-core/src/jolt/bytecode/: mod.rs  read_raf_checking.rs
prover/zkml-jolt-core/src/jolt/dag/: jolt_dag.rs  mod.rs  stage.rs  state_manager.rs
prover/zkml-jolt-core/src/jolt/executor/: booleanity.rs  hamming_weight.rs  mod.rs  ra_virtual.rs  read_raf_checking.rs
prover/zkml-jolt-core/src/jolt/executor/instructions/: add.rs  beq.rs  broadcast.rs  div.rs  gte.rs  mod.rs  mul.rs  relu.rs  reshape.rs  rsqrt.rs  softmax.rs  sra.rs  sub.rs  test.rs  virtual_advice.rs  virtual_assert_valid_div0.rs  virtual_assert_valid_signed_remainder.rs  virtual_const.rs  virtual_move.rs  virtual_pow2.rs  virtual_shift_right_bitmask.rs  virtual_sra.rs
prover/zkml-jolt-core/src/jolt/lookup_table/: jolt_tables.rs  mod.rs  relu.rs  test.rs
prover/zkml-jolt-core/src/jolt/lookup_table/prefixes/: jolt_prefixes.rs  lower_word_no_msb.rs  mod.rs  not_unary_msb.rs  relu.rs
prover/zkml-jolt-core/src/jolt/lookup_table/suffixes/: jolt_suffixes.rs  mod.rs  relu.rs
prover/zkml-jolt-core/src/jolt/memory/: mod.rs  read_write_checking.rs  val_evaluation.rs
prover/zkml-jolt-core/src/jolt/pcs/: mod.rs
prover/zkml-jolt-core/src/jolt/precompiles/: mod.rs  read_checking.rs  val_final.rs
prover/zkml-jolt-core/src/jolt/precompiles/einsum/: bmk_kbn_mbn.rs  k_nk_n.rs  mbk_nbk_bmn.rs  mk_kn_mn.rs  mod.rs  test.rs
prover/zkml-jolt-core/src/jolt/r1cs/: builder.rs  constraints.rs  inputs.rs  key.rs  spartan.rs  spartan_interleaved_poly.rs
prover/zkml-jolt-core/src/jolt/trace/: mod.rs
prover/zkml-jolt-core/src/utils/: mcc.rs  mod.rs  precompile_pp.rs
(+311 files in other folders)
