[package]
name = "arc-prover"
version = "0.1.0"
edition = "2021"
description = "zkML SNARK Proof Generation Service for Arc Agent using JOLT-Atlas"

[dependencies]
# JOLT-Atlas for real SNARK proofs
jolt-atlas = { path = ".." }
zkml-jolt-core = { path = "../zkml-jolt-core" }
onnx-tracer = { path = "../onnx-tracer", features = ["matmul_power_of_two_padding"] }
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", branch = "dev", package = "jolt-core", default-features = true }

# Arkworks (matching jolt-atlas workspace)
ark-bn254 = "0.5.0"
ark-serialize = { workspace = true }
ark-std = "0.5.0"

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptographic hashing
sha3 = "0.10"
hex = "0.4"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
