[package]
name = "zkml-jolt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
itertools = "0.10.0"
onnx-tracer = { path = "../onnx-tracer", features = [
  "matmul_power_of_two_padding",
] }
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", branch = "dev", package = "jolt-core", default-features = true }
rayon = { version = "^1.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.41", features = [
  "attributes",
], default-features = false }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
paste = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8.5"
thiserror = "1.0.58"
sha3 = "0.10.8"
ark-serialize = { workspace = true }
ark-serialize-derive = { version = "0.5.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
ark-std = { version = "0.5.0" }
serial_test = "3.2.0"
clap = { version = "4.3.10", features = ["derive"] }
anyhow = "1.0.97"
num-derive = "0.4.2"
num-traits = "0.2.19"
derive_more = { version = "2.0.1", features = ["from"] }
fixedbitset = "0.5.0"
num = "0.4.3"
regex = "1.10.6"

[dev-dependencies]
log = "0.4"

[lib]
name = "zkml_jolt_core"
path = "src/lib.rs"

[features]
assert_prover_claims = []
